# ChangeLog for app-misc/cl-xorg-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-xorg-meta-7.4 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-xorg-meta-7.4.ebuild:
  Meta package Xorg
