@@ -1,2 +1,2 @@
-EBUILD cl-xorg-meta-7.4.ebuild 1385 RMD160 c88c79f81f7436d6aa4e811a92bf12cd5c1d8936 SHA1 792ad20130d4043f798abf91cfa681078d93e446 SHA256 03cf5cc61b89e274a84a9a4cdf70a7b149a9dbc31976a9d98f116a7e02728170
-MISC ChangeLog 269 RMD160 9aef5b4242647ab03d98bfd5185acd16383f4fde SHA1 93ada224287b1ab7c2a22d01d81f374657b301b2 SHA256 e2287de5fcbf185987f039e2d6d1719afeed89d80c477ce9255ae51a3d3139f3
+EBUILD cl-xorg-meta-7.4-r1.ebuild 1429 RMD160 6b23465a76a0bf1162f94e1576a6a88cc27467d6 SHA1 64ed19d7a89b5504553954167aec935744b75f8d SHA256 a33716d866db6ce7275ca98d9e09c8e7523fe93584604d2d0b5f5fe376ccaddf
+MISC ChangeLog 450 RMD160 8c93da404799fa3f52eb9d77e86155f8fb9e76d7 SHA1 a0268ec88139c64ba823059ef2221cde31083c95 SHA256 cf08300474f3e172adad5ca470af58109ac64709d1009e6f1a2e18e7df3d7202
