@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-xorg-meta-7.4-r1 (03 Dec 2010)
+
+  03 Dec 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-xorg-meta-7.4.ebuild, +cl-xorg-meta-7.4-r1.ebuild:
+  Added x11-libs/xosd
+
 *cl-xorg-meta-7.4 (30 Nov 2010)
 
   30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
